--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       System.import('app').catch(function(err){ console.error(err); });
     </script>
     <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.min.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="styleshee">
+    <script src="node_modules/primeng/primeng.js"></script>
+    <link rel="stylesheet" type="text/css" href="node_modules/primeui/primeui-ng-all.min.css" />
+    <link rel="stylesheet" type="text/css" href="node_modules/primeui/themes/omega/theme.css" />
   </head>
   <!-- 3. Display the application -->
   <body style="background: lightgrey">
