--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <!-- 3. Display the application -->
-  <body style="background: lightgrey">
+  <body style="background: black">
     <app>Loading...</app>
   </body>
 </html>
